# pm15minv2

./: .gitignore  AGENTS.md  README.md  pyproject.toml
auto_research/: README.md  bootstrap_keepalive.sh  codex_background_loop.sh  experiment_queue.py  experiment_queue_supervisor.sh  program.md  program_direction_dense.md  program_reversal_dense.md  run_one_experiment.sh  run_one_experiment_background.sh  start_direction_dense.sh  start_reversal_dense.sh  status_autorun.sh  status_dense_autorun.sh  summarize_experiment.py  update_session.py
docs/: CURRENT_REMAINING_CHECKLIST.md  DATA_TECHNICAL_PLAN.md  DEEP_OTM_BASELINE_RETRAIN_PLAN.md  DEEP_OTM_BASELINE_UP_DIAGNOSIS.md  EXECUTION_BOARD.md  LIVE_OPERATOR_RUNBOOK.md  LIVE_OPERATOR_VALIDATION_20260322.md  LIVE_TECHNICAL_PLAN.md  MODEL_BUNDLE_IMPORT_STATE.md  PHASE_A_TRADING_INFRA_TECHNICAL_PLAN.md  POLY_EVAL_AND_SCRIPTS_MIGRATION_TECHNICAL_PLAN.md  README.md  RESEARCH_TECHNICAL_PLAN.md  REWRITE_STATUS_AND_ROADMAP.md  SERVER_CORRECT_PATHS.md  SRC_CODE_REVIEW_FINDINGS_20260414.md  V2_FULL_CODE_PARITY_AUDIT_20260323.md  V2_REFACTOR_REVIEW_20260320.md  V2_SHOULD_DO_EXECUTION_20260322.md  V2_TRAINING_BACKTEST_VISUALIZATION_PLAN.md  address_review_20260315.md
research/: AGENTS.md
scripts/: import_direction_model_bundles.py  monitor_orderbook_persist_rate.py  report_orderbook_capture_health.py  untrack_generated_artifacts.sh
tests/: test_architecture_guards.py  test_chainlink_rpc.py  test_chainlink_streams_api.py  test_cli.py  test_cli_lazy_loading.py  test_console_action_runner.py  test_console_actions.py  (+107 more)
(+469 files in other folders)
